fix pricing on mobile

--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ body {
 
 .pricing {
   text-align: center;
-  width: 50%;
+  width: 300px;
   margin: auto;
 }
 
